--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "electron-wix-msi",
+  "name": "@swl-sante/electron-wix-msi",
   "version": "2.2.0",
   "description": "Creates an MSI installer for your Electron app",
   "license": "MIT",
-  "repository": "",
-  "author": {
-    "name": "Felix Rieseberg",
-    "email": "felix@felixrieseberg.com",
-    "url": "https://www.felixrieseberg.com"
-  },
+  "repository" : "https://github.com/swl-sante/electron-wix-msi",
   "keywords": [
     "wix",
     "msi"
@@ -20,24 +15,32 @@
     "build": "tsc --pretty",
     "test": "npm run lint && jest",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "harness": "npm run build && node ./harness/harness.js"
+    "harness:msi": "cd harness && ts-node harness.ts --platform win32 --dist user --ext msi"
   },
   "dependencies": {
     "debug": "^4.1.1",
     "fs-extra": "^8.1.0",
     "klaw": "^3.0.0",
     "lodash": "^4.17.15",
-    "uuid": "^3.3.3"
+    "uuid": "^3.4.0"
   },
+  
   "devDependencies": {
+    "argparse": "^1.0.10",
+    "electron-builder": "19.31.1",
+    "electron-packager": "14.2.0",
+    "electron": "~1.7.14",
+    "@types/argparse": "^1.0.38",
     "@types/debug": "4.1.5",
+    "@types/electron-builder": "^2.8.0",
+    "@types/electron-packager": "^14.0.0",
     "@types/fs-extra": "^8.0.1",
     "@types/graceful-fs": "^4.1.3",
     "@types/jest": "^24.0.23",
     "@types/klaw": "^3.0.0",
     "@types/lodash": "^4.14.147",
     "@types/mock-fs": "^4.10.0",
-    "@types/node": "^12.12.7",
+    "@types/node": "^13.5.0",
     "@types/uuid": "^3.4.6",
     "coveralls": "^3.0.7",
     "jest": "^20.0.4",
@@ -45,10 +48,12 @@
     "mock-fs": "^4.10.3",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "typescript": "latest",
+    "ts-node": "latest",
+    "nodemon": "latest"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=12.0.0"
   },
   "jest": {
     "transform": {
@@ -72,5 +77,8 @@
       "!src/interfaces.ts",
       "!src/index.ts"
     ]
+  }, 
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
   }
 }
