--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
+    "install": "npm install",
     "prepublish": "npm run build",
     "build": "tsc --pretty",
     "test": "npm run lint && jest",
