--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swl-sante/electron-wix-msi",
-  "version": "3.0.3",
+  "version": "3.1.0",
   "description": "Creates an MSI installer for your Electron app",
   "license": "MIT",
   "repository": "https://github.com/swl-sante/electron-wix-msi",
@@ -23,7 +23,7 @@
     "klaw": "^3.0.0",
     "lodash": "^4.17.15",
     "uuid": "^7.0.0",
-    "electron-packager": "14.2.0",
+    "electron-packager": "14.2.1",
     "argparse": "^1.0.10"
   },
   "devDependencies": {
@@ -45,7 +45,7 @@
     "mock-fs": "^4.10.3",
     "ts-jest": "^24.1.0",
     "tslint": "^6.0.0",
-    "typescript": "3.8.2"
+    "typescript": "latest"
   },
   "engines": {
     "node": ">=12.0.0"
